--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "eslint-plugin-react": "^7.1.0",
     "lottie-react-native": "^1.1.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
@@ -15,6 +16,8 @@
   "devDependencies": {
     "babel-jest": "20.0.1",
     "babel-preset-react-native": "1.9.1",
+    "eslint-plugin-class-property": "^1.0.6",
+    "eslint-plugin-react-native": "^2.3.2",
     "jest": "20.0.1",
     "react-test-renderer": "16.0.0-alpha.6"
   },
