--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "eslint-plugin-react": "^7.1.0",
     "lottie-react-native": "^1.1.1",
+    "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-background-timer": "^1.0.2"
